tests/machine/x/c/group_by.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_by.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_by.c:147:26: warning: implicit declaration of function ‘people_list_t_create’ [-Wimplicit-function-declaration]
  147 |     people_list_t tmp9 = people_list_t_create(_gp.items.len);
      |                          ^~~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/group_by.c:147:26: error: invalid initializer

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:49Z
